manifests/telegraf-operator-1.4.0.tgz-manifest.yaml
---
# Source: telegraf-operator/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-telegraf-operator
  namespace: default
  labels:
    helm.sh/chart: telegraf-operator-1.4.0
    app.kubernetes.io/name: telegraf-operator
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "v1.3.11"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
  - name: https
    port: 443
    protocol: TCP
    targetPort: 9443
  selector:
    app.kubernetes.io/name: telegraf-operator
    app.kubernetes.io/instance: my-release
---
# Source: telegraf-operator/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-release-telegraf-operator
  namespace: default
  labels:
    helm.sh/chart: telegraf-operator-1.4.0
    app.kubernetes.io/name: telegraf-operator
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "v1.3.11"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: telegraf-operator
      app.kubernetes.io/instance: my-release
  template:
    metadata:
      labels:
        app.kubernetes.io/name: telegraf-operator
        app.kubernetes.io/instance: my-release
      annotations:
        checksum/config: cf0a00c1e3c32e3119f6f2ef8327c3fbd0b0c808b7847e9df66a88c775b4fc24
    spec:
      containers:
        - name: telegraf-operator
          securityContext:
            {}
          image: "quay.io/influxdb/telegraf-operator:v1.3.11"
          imagePullPolicy: IfNotPresent
          args:
            - "--telegraf-default-class=infra"
            - --telegraf-classes-directory=/etc/telegraf-operator
            - --enable-default-internal-plugin
            - "--telegraf-image=docker.io/library/telegraf:1.22"
            - "--telegraf-requests-cpu=10m"
            - "--telegraf-requests-memory=10Mi"
            - "--telegraf-limits-cpu=200m"
            - "--telegraf-limits-memory=200Mi"
          ports:
            - name: https
              containerPort: 9443
              protocol: TCP
          volumeMounts:
            - mountPath: /etc/certs
              name: certs
              readOnly: true
            - mountPath: /etc/telegraf-operator
              name: classes
              readOnly: true
          resources:
            limits:
              cpu: 200m
              memory: 256Mi
            requests:
              cpu: 50m
              memory: 64Mi
      serviceAccountName: my-release-telegraf-operator
      securityContext:
        {}
      volumes:
      - name: certs
        secret:
          secretName: telegraf-operator-tls
      - name: classes
        secret:
          secretName: telegraf-operator-classes
---
# Source: telegraf-operator/templates/tls.yml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: "/my-release-telegraf-operator"
  labels:
    helm.sh/chart: telegraf-operator-1.4.0
    app.kubernetes.io/name: telegraf-operator
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "v1.3.11"
    app.kubernetes.io/managed-by: Helm
  name: my-release-telegraf-operator
webhooks:
- clientConfig:
    service:
      name: my-release-telegraf-operator
      namespace: default
      path: /mutate-v1-pod
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURLVENDQWhHZ0F3SUJBZ0lRVHJLTEloSnRXMEx0a29WWFNxNG50akFOQmdrcWhraUc5dzBCQVFzRkFEQWYKTVIwd0d3WURWUVFERXhSMFpXeGxaM0poWmkxdmNHVnlZWFJ2Y2kxallUQWVGdzB5TkRBMk1UWXdNRE0zTURsYQpGdzB5TlRBMk1UWXdNRE0zTURsYU1COHhIVEFiQmdOVkJBTVRGSFJsYkdWbmNtRm1MVzl3WlhKaGRHOXlMV05oCk1JSUJJakFOQmdrcWhraUc5dzBCQVFFRkFBT0NBUThBTUlJQkNnS0NBUUVBd2xZM1pmTVdZQW02Tlo0aDM0SjQKMEViQ0ZPeG5Ca0crTWtJekNsbzJuMFdYR2pOczhYeDNaSXYwZmhIV0pNTGI1UFEvWkp5YkxoYVFZT0RvZHdiMQo0RTdxdmxkN1Y0Rl [...]
  failurePolicy: Ignore
  sideEffects: None
  admissionReviewVersions:
  - 'v1'
  name: telegraf.influxdata.com
  rules:
  - apiGroups:
    - '*'
    apiVersions:
    - '*'
    operations:
    - CREATE
    - DELETE
    resources:
    - pods
